[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies.winapi]
version = "0.3.9"
features = ["winuser"]

[dependencies]
colored = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.145"
toml = "0.5.9"